<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryLight"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        tools:context="com.example.android.mamaslittlebakery.MainActivity">

        <ImageView
            android:layout_width="220dp"
            android:layout_height="140dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/padding_basic"
            android:background="@drawable/mamas_little_bakery" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font_basic"
            android:paddingLeft="@dimen/padding_basic"
            android:paddingBottom="@dimen/padding_basic"
            android:text="@string/about"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_big" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="@dimen/padding_basic"
                android:background="@drawable/ciasteczka" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@string/font_basic"
                android:paddingLeft="@dimen/padding_basic"
                android:paddingRight="@dimen/padding_basic"
                android:text="@string/example_text_long"
                android:textColor="@color/textColorSecondary"
                android:textSize="@dimen/text_size_basic" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font_basic"
            android:padding="@dimen/padding_basic"
            android:text="@string/specials"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_big" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/special_1"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginLeft="@dimen/padding_basic"
                android:layout_marginRight="@dimen/padding_basic"
                android:layout_weight="1"
                android:background="@drawable/pumpkin_pie" />

            <ImageView
                android:id="@+id/special_2"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginLeft="@dimen/padding_basic"
                android:layout_marginRight="@dimen/padding_basic"
                android:layout_weight="1"
                android:background="@drawable/chocolate_pudding_pie" />

            <ImageView
                android:id="@+id/special_3"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginLeft="@dimen/padding_basic"
                android:layout_marginRight="@dimen/padding_basic"
                android:layout_weight="1"
                android:background="@drawable/buttercream_vanilla_cake" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_basic"
                android:layout_weight="1"
                android:fontFamily="@string/font_basic"
                android:text="@string/special_1"
                android:textColor="@color/textColorSecondary"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_basic"
                android:layout_weight="1"
                android:fontFamily="@string/font_basic"
                android:text="@string/special_2"
                android:textColor="@color/textColorSecondary"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_basic"
                android:layout_weight="1"
                android:fontFamily="@string/font_basic"
                android:text="@string/special_3"
                android:textColor="@color/textColorSecondary"
                android:textSize="@dimen/text_size_small" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:padding="@dimen/padding_basic"
            android:text="@string/contact"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_big" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/localization_icon"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginLeft="@dimen/padding_basic"
                android:background="@drawable/ic_location_on_black_48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/padding_medium"
                android:fontFamily="@string/font_basic"
                android:text="@string/bakery_address"
                android:textColor="@color/textColorSecondary"
                android:textSize="@dimen/text_size_basic"
                android:autoLink="map"
                android:linksClickable="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/phone_icon"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_below="@id/localization_icon"
                android:layout_marginLeft="@dimen/padding_basic"
                android:background="@drawable/ic_perm_phone_msg_black_48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/padding_medium"
                android:fontFamily="@string/font_basic"
                android:text="@string/bakery_phone"
                android:textColor="@color/textColorSecondary"
                android:textSize="@dimen/text_size_basic"
                android:autoLink="phone"
                android:clickable="true"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>